@@ -8,6 +8,7 @@
 * RecursiveMkdir() function report $dirname on error
 * Fix 'content-type' header returned by get_js.php script
 * Adding config option for globaly set cookie parameters
+* Allow to globaly configure initial values of OohForm class options
 
 Version 2.2.2
 ==============
